32.cicd/48.Harbor/harbor-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/proxy-body-size":"0","ingress.kubernetes.io/ssl-redirect":"true","meta.helm.sh/release-name":"harbor","meta.helm.sh/release-namespace":"harbor","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.org/client-max-body-size":"3G"},"creationTimestamp":"2020-11-10T00:59:30Z","generation":1,"labels":{"app":"harbor","app.kubernetes.io/managed [...]
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: harbor
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.org/client-max-body-size: 3G
  creationTimestamp: "2020-11-10T00:59:30Z"
  generation: 1
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-harbor-ingress
  namespace: harbor
  resourceVersion: "2413391"
  selfLink: /apis/extensions/v1beta1/namespaces/harbor/ingresses/harbor-harbor-ingress
  uid: 5536b5de-cdfd-417c-ae57-41b1714b0164
spec:
  rules:
  - host: spkr.harbor.io
    http:
      paths:
      - backend:
          serviceName: harbor-harbor-portal
          servicePort: 80
        path: /
      - backend:
          serviceName: harbor-harbor-core
          servicePort: 80
        path: /api/
      - backend:
          serviceName: harbor-harbor-core
          servicePort: 80
        path: /service/
      - backend:
          serviceName: harbor-harbor-core
          servicePort: 80
        path: /v2/
      - backend:
          serviceName: harbor-harbor-core
          servicePort: 80
        path: /chartrepo/
      - backend:
          serviceName: harbor-harbor-core
          servicePort: 80
        path: /c/
  tls:
  - hosts:
    - spkr.harbor.io
    secretName: harbor-harbor-ingress
